# learn_hobby

./: .gitignore  AGENTS.md  Cargo.toml  README.md  guideline.md
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs  scheduler.rs  time.rs
crates/core/src/model/: app_settings.rs  card.rs  deck.rs  ids.rs  mod.rs  review.rs  session.rs  tag.rs
crates/core/src/model/content/: content.rs  media.rs  mod.rs  text.rs  types.rs
crates/services/: Cargo.toml
crates/services/src/: app_services.rs  app_settings_service.rs  card_service.rs  deck_service.rs  error.rs  lib.rs  review_service.rs  session_loop.rs  session_service.rs  session_view.rs  writing_tools_service.rs
crates/services/src/ai/: mod.rs  pricing.rs  usage.rs
crates/services/src/sessions/: mod.rs  plan.rs  progress.rs  queries.rs  service.rs  view.rs  workflow.rs
crates/services/tests/: editor_flow.rs  session_loop_smoke.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs  repository.rs
crates/storage/src/sqlite/: ai_price_book_repo.rs  ai_usage_repo.rs  app_settings_repo.rs  card_repo.rs  deck_repo.rs  mapping.rs  migrate.rs  mod.rs  review_log_repo.rs  session_summary_repo.rs
crates/storage/tests/: sqlite_integration.rs
crates/ui/: Cargo.toml
crates/ui/assets/: style.css
crates/ui/src/: app.rs  context.rs  lib.rs  main.rs  routes.rs
crates/ui/src/platform/: macos.rs  mod.rs
crates/ui/src/views/: editor.rs  general_settings.rs  history.rs  home.rs  mod.rs  practice.rs  session.rs  settings.rs  state.rs  summary.rs  test_harness.rs  view_smoke.rs
crates/ui/src/views/editor/: actions.rs  intent_smoke.rs  mod.rs  scripts.rs  state.rs  test_harness.rs  utils.rs  view.rs
crates/ui/src/views/editor/actions/: cards.rs  decks.rs  format.rs  intent.rs  keyboard.rs  link.rs  menus.rs  save.rs  tags.rs
crates/ui/src/views/editor/components/: detail.rs  list.rs  mod.rs  modals.rs  toolbar.rs
crates/ui/src/views/session/: mod.rs  scripts.rs  session.rs
crates/ui/src/views/settings/: components.rs  helpers.rs  mod.rs  sections.rs  state.rs  view.rs
crates/ui/src/vm/: card_vm.rs  deck_vm.rs  editor_vm.rs  markdown_vm.rs  mod.rs  practice_vm.rs  session_summary_vm.rs  session_vm.rs  time_fmt.rs
