[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus = { version = "0.7", features = ["desktop"] }
learn-core = { path = "../core" }
services = { path = "../services" }
storage = { path = "../storage" }
ui = { path = "../ui" }
tokio = { version = "1", features = ["rt-multi-thread"] }
