[package]
name = "services"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4"
thiserror = "2"
rand = { version = "0.9", features = ["std"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

learn-core = { path = "../core" }
storage = { path = "../storage" }

[dev-dependencies]
async-trait = "0.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
