[package]
name = "storage"
version = "0.1.0"
edition = "2024"

[dependencies]
learn-core = { path = "../core" }
thiserror = "1"
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "chrono",
    "macros",
    "uuid",
] }
async-trait = "0.1.83"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
