[package]
name = "ui"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus = { version = "0.7", features = ["asset", "desktop", "document"] }
dioxus-router = { version = "0.7" }
services = { path = "../services" }
learn-core = { path = "../core" }
chrono = { version = "0.4" }
tokio = { version = "1", features = ["time"] }
pulldown-cmark = "0.13"
ammonia = "4"
html2md = "0.2"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
storage = { path = "../storage" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
dioxus-ssr = "0.7"
async-trait = "0.1"
